[web] display messages if not correctly selected & display correct lat/lng

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -15,16 +15,14 @@
 					<h4>Start</h4>
 				</label-big>
 				<br>
-				Lat: 12.59304
-				Lon: 57.35678
+				<div id="start-text">click on the map and select it</div>
 			</div>
 			<div class="input-wrapper">
 				<label-big for="end-time">
 					<h4>End:</h4>
 				</label-big>
 				<br>
-				Lat: 9.324234
-				Lon: 52.324234
+				<div id="end-text">click on the map and select it</div>
 			</div>
 			<div class="input-wrapper">
 				<label-big for="end-time">
