[web] add showing resulting costs

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -48,6 +48,7 @@
 		<div class="toast" id="invalid-request" style="display:none" onclick="hide_invalid_request()">Invalid Request</div>
 		<div class="toast" id="no-path-found" style="display:none" onclick="hide_no_path_found()">No Path found</div>
 		<div class="toast" id="select-start-and-end" style="display:none" onclick="hide_select_start_and_end()">Please select start and end</div>
+		<div class="toast" id="result" style="display:none" onclick="hide_result()">Resulting cost</div>
 		<script src="leaflet_script.js"></script>
 	</body>
 </html>
