[web] make use of travel_type

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -30,6 +30,7 @@
 				</label-big>
 				<select id="travel-type">
 					<option value="car">car</option>
+					<option value="bicycle">bicycle</option>
 					<option value="foot">foot</option>
 				</select>
 			</div>
