--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>osm-dijkstra</title>
+		<title>osm_dijkstra</title>
 	</head>
 	<body>
 		<div id="map"></div>
